compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_nosize.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 157
expression: "case <<1>> { <<_:binary, _:binary>> -> 1 }"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case <<1>> { <<_:binary, _:binary>> -> 1 }
  │                  ^^^^^^ This segment has no size

Hint: Bit string segments without a size are only allowed at the end of a
bin pattern.
See: https://gleam.run/book/tour/bit-strings.html

